force-app/main/default/objects/Training_Session_Attendee__c/Training_Session_Attendee__c.object-meta.xml
<CustomObject>
    <label>Training Session Attendee</label>
    <nameField>
        <label>Training Session Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Session Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>