force-app/main/default/objects/Training_Session_Attendee__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Session_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>