force-app/main/default/objects/Training_Session_Attendee__c/fields/Is_Session_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Is_Session_Attendee__c</fullName>
    <formula>$User.Id =  Attendee__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Session Attendee</label>
    <type>Checkbox</type>
</CustomField>