force-app/main/default/objects/Training_Session_Attendee__c/fields/Session_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Start_Time__c</fullName>
    <formula>Training_Session__r.Session_Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Start Time</label>
    <type>DateTime</type>
</CustomField>