force-app/main/default/objects/Training_Session_Attendee__c/fields/Training_Course__c.field-meta.xml
<CustomField>
    <fullName>Training_Course__c</fullName>
    <formula>Training_Session__r.Training_Course__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Course</label>
    <type>Text</type>
</CustomField>