force-app/main/default/objects/Training_Session_Attendee__c/fields/Training_Program__c.field-meta.xml
<CustomField>
    <fullName>Training_Program__c</fullName>
    <formula>Training_Session__r.Training_Program__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Program</label>
    <type>Text</type>
</CustomField>