force-app/main/default/objects/Training_Session_Attendee__c/fields/Training_Session__c.field-meta.xml
<CustomField>
    <fullName>Training_Session__c</fullName>
    <label>Training Session</label>
    <referenceTo>Training_Session__c</referenceTo>
    <relationshipLabel>Training Session Attendees</relationshipLabel>
    <relationshipName>Training_Session_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>