force-app/main/default/objects/Training_Session_Attendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Training_Session__c</columns>
    <columns>Training_Course__c</columns>
    <columns>Training_Program__c</columns>
    <columns>Training_Hours__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>